[gd_scene load_steps=10 format=2]

[ext_resource path="res://textures/Stone Golem.png" type="Texture" id=1]
[ext_resource path="res://scripts/StoneGolem.gd" type="Script" id=2]
[ext_resource path="res://scripts/StoneGolemKinematicBody2D.gd" type="Script" id=3]
[ext_resource path="res://scripts/walkTimer.gd" type="Script" id=4]
[ext_resource path="res://scripts/DamageArea.gd" type="Script" id=5]
[ext_resource path="res://scripts/Hitbox.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 113, 23 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.5, 11.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 21.0

[node name="StoneGolem" type="Node2D"]
script = ExtResource( 2 )

[node name="ActivationArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationArea"]
position = Vector2( 0, -13 )
shape = SubResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 8
collision_mask = 3
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0.5, -0.5 )
shape = SubResource( 1 )

[node name="ProjectilePosition" type="Position2D" parent="KinematicBody2D"]
position = Vector2( -11, 0 )

[node name="RayCast2D" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( -12, -1 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="walkTimer" type="Timer" parent="KinematicBody2D"]
wait_time = 2.5
autostart = true
script = ExtResource( 4 )

[node name="DamageArea" type="Area2D" parent="KinematicBody2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/DamageArea"]
shape = SubResource( 3 )

[node name="shotTimer" type="Timer" parent="KinematicBody2D"]
wait_time = 2.0

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource( 6 )
entity_path = NodePath("../KinematicBody2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[connection signal="body_entered" from="ActivationArea" to="." method="spawnRock"]
[connection signal="body_entered" from="ActivationArea" to="KinematicBody2D" method="_on_ActivationArea_body_entered"]
[connection signal="body_exited" from="ActivationArea" to="." method="_on_ActivationArea_body_exited"]
[connection signal="body_exited" from="ActivationArea" to="KinematicBody2D" method="_on_ActivationArea_body_exited"]
[connection signal="resetTimer" from="KinematicBody2D" to="KinematicBody2D/walkTimer" method="reset"]
[connection signal="timeout" from="KinematicBody2D/walkTimer" to="KinematicBody2D" method="_on_walkTimer_timeout"]
[connection signal="area_entered" from="KinematicBody2D/DamageArea" to="KinematicBody2D/DamageArea" method="_on_DamageArea_area_entered"]
[connection signal="timeout" from="KinematicBody2D/shotTimer" to="." method="spawnRock"]
